plugins {
  id 'java'
}
apply plugin: 'maven-publish'

sourceSets.main.java.srcDirs = ["src/main/java"]
sourceSets.test.java.srcDirs = ["src/test/java"]

group = 'com.github.EB-wilson'

repositories {
  mavenCentral()
  maven{ url 'https://www.jitpack.io' }
}

tasks.withType(JavaCompile){
  options.encoding = "UTF-8"

  sourceCompatibility = 17
  targetCompatibility = 17

  options.compilerArgs.addAll([
      "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
      "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
      "--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
      "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
      "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
      "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
      "--add-exports", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
      "--add-exports", "jdk.compiler/com.sun.tools.javac.resources=ALL-UNNAMED",
  ])
}

publishing {
  publications {
    maven(MavenPublication) {
      groupId = 'com.github.EB-wilson.JavaDynamilizer'
      artifactId = 'apt'
      version = "$JDERVersion"
      from components.java
    }
  }
}

dependencies {
  implementation project(":annotations")

  compileOnly 'com.google.auto.service:auto-service:1.0.1'

  annotationProcessor 'com.google.auto.service:auto-service:1.0.1'
}
